# cpp_starter

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  conanfile.py
app/: CMakeLists.txt
app/include/: application.h
app/src/: application.cpp  main.cpp
cmake/: CompilerWarnings.cmake  Doxygen.cmake  Version.cmake
pkg_version/: pkg_version.h.in
test/: CMakeLists.txt
utils/: CMakeLists.txt  main.cpp
